--- a/Distribuicao.Lucros.Infra.Ioc/Distribuicao.Lucros.Infra.Ioc.csproj
+++ b/Distribuicao.Lucros.Infra.Ioc/Distribuicao.Lucros.Infra.Ioc.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Distribuicao.Lucros.Domain\Distribuicao.Lucros.Domain.csproj" />
+    <ProjectReference Include="..\Distribuicao.Lucros.Service\Distribuicao.Lucros.Service.csproj" />
+  </ItemGroup>
+
 </Project>
